test/corpus/css/css_declarations.txt
================================================================================
Function calls
================================================================================

a {
  color: rgba(0, 255, 0, 0.5);
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (jssPropertyValue
                (number)
                (number)
                (number)
                (number)))))))))

================================================================================
Calls where each argument has multiple values
================================================================================

div {
  background: repeating-linear-gradient(red, orange 50px);
  clip-path: polygon(50% 0%, 60% 40%, 100% 50%, 60% 60%, 50% 100%, 40% 60%, 0% 50%, 40% 40%);
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier)
                (identifier)
                (identifier))
              (jssPropertyValue
                (cssLiteral
                  (identifier))
                (cssLiteral
                  (identifier))
                (number)
                (cssLiteral
                  (identifier))))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (jssPropertyValue
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)
                (number)))))))))

================================================================================
Color literals
================================================================================

a {
  b: #fafd04;
  c: #fafd0401;
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier)))))))))

================================================================================
Numbers
================================================================================

a {
  b: 0.5%;
  c: 5em;
  margin: 10E3px;
  margin: -456.8px;
  margin: -5px;
  margin: -0.0px;
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (cssLiteral
                (identifier)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (cssLiteral
                (identifier)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (cssLiteral
                (identifier)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (cssLiteral
                (identifier)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (cssLiteral
                (identifier)))))))))

================================================================================
Binary arithmetic operators
================================================================================

a {
  width: calc(100% - 80px);
  aspect-ratio: 1/2;
  font-size: calc(10px + (56 - 10) * ((100vw - 320px) / (1920 - 320)));
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (jssPropertyValue
                (number)
                (number)
                (cssLiteral
                  (identifier))))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (number))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (jssPropertyValue
                (number)
                (cssLiteral
                  (identifier))
                (jssPropertyValue
                  (number)
                  (number))
                (jssPropertyValue
                  (jssPropertyValue
                    (number)
                    (cssLiteral
                      (identifier))
                    (number)
                    (cssLiteral
                      (identifier)))
                  (jssPropertyValue
                    (number)
                    (number)))))))))))

================================================================================
Strings
================================================================================

a {
  b: '';
  c: '\'hi\'';
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (string))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (string
                (escape_sequence)
                (string_fragment)
                (escape_sequence)))))))))

================================================================================
URLs
================================================================================

a {
  b: http://something-else?foo=bar;
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier)))))
        (comment)))))

================================================================================
Important declarations
================================================================================

a {
  b: c !important;
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))))))))

================================================================================
Declarations without trailing semicolons
================================================================================

a {
  b: c;
  d: e
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier)))))))))

================================================================================
Comments right after numbers
================================================================================

a {
	shape-outside: circle(20em/*=*/at 50% 50%);
	shape-outside: inset(1em, 1em, 1em, 1em);
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (jssPropertyValue
                (number)
                (cssLiteral
                  (identifier))
                (comment)
                (cssLiteral
                  (identifier))
                (number)
                (number)))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (cssLiteral
                (identifier))
              (jssPropertyValue
                (number)
                (cssLiteral
                  (identifier))
                (number)
                (cssLiteral
                  (identifier))
                (number)
                (cssLiteral
                  (identifier))
                (number)
                (cssLiteral
                  (identifier))))))))))

================================================================================
Declarations at the top level
================================================================================

--a-variable: -5px;
a-property: calc(5px + var(--a-variable));

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (jssPropertyDefinition
      (jssPropertyName
        (cssLiteral
          (identifier))
        (cssLiteral
          (identifier)))
      (jssPropertyValue
        (number)
        (cssLiteral
          (identifier)))))
  (empty_statement)
  (stylesheetItem
    (jssPropertyDefinition
      (jssPropertyName
        (cssLiteral
          (identifier))
        (cssLiteral
          (identifier)))
      (jssPropertyValue
        (cssLiteral
          (identifier))
        (jssPropertyValue
          (number)
          (cssLiteral
            (identifier))
          (jssPropertyValue
            (cssLiteral
              (identifier))
            (cssLiteral
              (identifier)))))))
  (empty_statement))

================================================================================
Spaces after colons in property declarations
================================================================================

div {
  margin      : 0;
  padding     : 0;
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (elementName
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number))))
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number))))))))
