test/corpus/css/css_stylesheets.txt
================================================================================
Rule sets
================================================================================

#some-id {
  some-property: 5px;
}

--------------------------------------------------------------------------------

(program
  (stylesheetItem
    (rule_set
      (selectors
        (simpleSelector
          (hash)
          (hash
            (cssLiteral
              (identifier))
            (cssLiteral
              (identifier)))))
      (block
        (jssDeclaration
          (jssPropertyDefinition
            (jssPropertyName
              (cssLiteral
                (identifier))
              (cssLiteral
                (identifier)))
            (jssPropertyValue
              (number)
              (cssLiteral
                (identifier)))))))))
